cleanup notes and pages

--- a/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/contact.html
+++ b/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/contact.html
@@ -14,7 +14,7 @@
 			<header class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-4 medium-4 small-4 cell">
 					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> LivingLaboratory.org</a>
+						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
 					</div>
 				</div>
 				<div class="large-8 medium-8 small-8 cell">
@@ -22,7 +22,7 @@
 						<ul class="dropdown menu align-right" data-dropdown-menu>
 							<li><a href="species.html">Species</a></li>
 							<li>
-								<a href="reports.html">Reports</a>
+								<a href="contact.html">Reports</a>
 								<ul class="menu align-right">
 									<li><a href="possible-approaches.html">Creating a Living Laboratory</a></li>
 									<li><a href="intertidal-zones.html">Intertidal Zones</a></li>
@@ -35,31 +35,46 @@
 			</header>
 			<!--  -->
 			<div class="grid-x grid-padding-x">
-				<div class="large-12 cell">
+				<div class="large-7 medium-12 cell">
 					<h1>Contact</h1>
-				</div>
-			</div>
-			<!--  -->
-			<div class="grid-x grid-padding-x">
-				<div class="large-12 medium-12 small-12 cell">
+					<p>Hey there! Interested in teaming up to make a positive difference on our planet? We're all about collaboration and making things happen together. Whether you have an idea for a community project, want to join forces for an event, or just feel like brainstorming some cool initiatives, we'd love to hear from you. Let's chat and see how we can work together to create something awesome!</p>
 					<p><a href="mailto:eorae@yahoo.com?subject=livinglaboratory.org">eorae@yahoo.com</a></p>
 					<p><a href="tel:+15086659192">1-508-665-9192</a></p>
 				</div>
+				<div class="large-5 medium-12 cell">
+					<h2>Recent Projects</h2>
+					<a href="possible-approaches.html">
+						<div class="card">
+							<img src="media/image.gif" />
+							<div class="card-section">
+								<p>Creating a Living Laboratory for Deadmans Head Forest During the Age of Climate Change</p>
+							</div>
+						</div>
+					</a>
+					<!--  -->
+					<a href="intertidal-zones.html">
+						<div class="card">
+							<img src="media/image.gif" />
+							<div class="card-section">
+								<p>Intertidal Zones within Deadmans Harbour and the Bay of Fundy</p>
+							</div>
+						</div>
+					</a>
+				</div>
 			</div>
-
 			<!--  -->
 			<footer class="grid-x grid-padding-x grid-padding-y align-middle" id="contact">
 				<div class="large-4 medium-4 small-4 cell">
 					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> LivingLaboratory.org</a>
+						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
 					</div>
 				</div>
 				<div class="large-8 medium-8 small-8 cell">
 					<div>
 						<ul class="menu align-right">
-							<ul class="menu align-right">
+							<ul class="dropdown menu align-right" data-dropdown-menu>
 								<li><a href="species.html">Species</a></li>
-								<li><a href="reports.html">Reports</a></li>
+								<li><a href="contact.html">Reports</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="legal.html">Legal Stuff</a></li>
 							</ul>
