--- a/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/intertidal-zones.html
+++ b/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/intertidal-zones.html
@@ -14,7 +14,7 @@
 			<header class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-4 medium-4 small-4 cell">
 					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> LivingLaboratory.org</a>
+						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
 					</div>
 				</div>
 				<div class="large-8 medium-8 small-8 cell">
@@ -22,7 +22,7 @@
 						<ul class="dropdown menu align-right" data-dropdown-menu>
 							<li><a href="species.html">Species</a></li>
 							<li>
-								<a href="reports.html">Reports</a>
+								<a href="contact.html">Reports</a>
 								<ul class="menu align-right">
 									<li><a href="possible-approaches.html">Creating a Living Laboratory</a></li>
 									<li><a href="intertidal-zones.html">Intertidal Zones</a></li>
@@ -63,10 +63,10 @@
 				<div class="large-6 medium-6 small-6 cell">
 					<div>
 						<code>DRONE VIDEO</code>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/ubFq-wV3Eic?si=J_u0VkDZEwReHOj_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 					</div>
 				</div>
 				<div class="large-6 medium-6 small-6 cell">
+					<code>allysiamurphy9</code>
 					<div>
 						<div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
 							<div class="orbit-wrapper">
@@ -122,15 +122,15 @@
 			<footer class="grid-x grid-padding-x grid-padding-y align-middle" id="contact">
 				<div class="large-4 medium-4 small-4 cell">
 					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> LivingLaboratory.org</a>
+						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
 					</div>
 				</div>
 				<div class="large-8 medium-8 small-8 cell">
 					<div>
 						<ul class="menu align-right">
-							<ul class="menu align-right">
+							<ul class="dropdown menu align-right" data-dropdown-menu>
 								<li><a href="species.html">Species</a></li>
-								<li><a href="reports.html">Reports</a></li>
+								<li><a href="contact.html">Reports</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="legal.html">Legal Stuff</a></li>
 							</ul>
