--- a/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/index.html
+++ b/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/index.html
@@ -28,7 +28,7 @@
 			<header class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-4 medium-4 small-4 cell">
 					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> LivingLaboratory.org</a>
+						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
 					</div>
 				</div>
 				<div class="large-8 medium-8 small-8 cell">
@@ -36,7 +36,7 @@
 						<ul class="dropdown menu align-right" data-dropdown-menu>
 							<li><a href="species.html">Species</a></li>
 							<li>
-								<a href="reports.html">Reports</a>
+								<a href="contact.html">Reports</a>
 								<ul class="menu align-right">
 									<li><a href="possible-approaches.html">Creating a Living Laboratory</a></li>
 									<li><a href="intertidal-zones.html">Intertidal Zones</a></li>
@@ -51,13 +51,21 @@
 			<div class="grid-x grid-padding-x grid-padding-y align-center text-center">
 				<div class="large-10 cell">
 					<h1>Creating a Living Laboratory on Deadmans Head to identify and research species and how they respond to climate change.</h1>
+
+					<code>monarch</code>
+					<p><img src="media/image.gif" /></p>
+
+					<code>land with markers</code>
+					<p><img src="media/image.gif" /></p>
 				</div>
 			</div>
 			<!--  -->
 			<div class="grid-x grid-padding-x grid-padding-y">
 				<div class="large-12 medium-12 small-12 cell">
 					<div>
-						<iframe width="100%" height="450" src="https://www.youtube.com/embed/Gj9aNi6Dr_k?si=o_H9O5IhAumlUnyI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+						<figure class="video">
+							<video controls src="possible-approaches/point.mp4"></video>
+						</figure>
 					</div>
 				</div>
 			</div>
@@ -74,7 +82,7 @@
 				</div>
 			</div>
 			<!--  -->
-
+			<code>6 to 10 photos to show diversity like lichen, flowers, eagle, porcupine, seaweed, monarch, etc</code>
 			<div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
 				<div class="orbit-wrapper">
 					<div class="orbit-controls">
@@ -116,6 +124,7 @@
 			<div class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-offset-1 large-3 medium-4 small-4 cell">
 					<div>
+						<code>bay of fundy</code>
 						<p><img src="media/image.gif" /></p>
 					</div>
 				</div>
@@ -133,6 +142,7 @@
 			<div class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-offset-1 large-3 medium-4 small-4 cell">
 					<div>
+						<code>students</code>
 						<p><img src="media/image.gif" /></p>
 					</div>
 				</div>
@@ -150,6 +160,7 @@
 			<div class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-offset-1 large-3 medium-4 small-4 cell">
 					<div>
+						<code>drone</code>
 						<p><img src="media/image.gif" /></p>
 					</div>
 				</div>
@@ -167,6 +178,7 @@
 			<div class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-offset-1 large-3 medium-4 small-4 cell">
 					<div>
+						<code>inat</code>
 						<p><img src="media/image.gif" /></p>
 					</div>
 				</div>
@@ -181,52 +193,18 @@
 				</div>
 			</div>
 			<!--  -->
-			<!-- <div class="grid-x grid-padding-x grid-padding-y align-middle">
-				<div class="large-offset-1 large-3 medium-4 small-4 cell">
-					<div>
-						<p><img src="media/image.gif" /></p>
-					</div>
-				</div>
-				<div class="large-7 medium-8 small-8 cell">
-					<div>
-						<h3>Community Engagement and Outreach:</h3>
-						<ul>
-							<li>Develop educational programs and materials to raise awareness about the importance of the Deadmans Head Forest ecosystem and the ongoing research efforts.</li>
-							<li>Organize workshops, seminars, and public events to involve the community in conservation efforts and citizen science initiatives.</li>
-						</ul>
-					</div>
-				</div>
-			</div> -->
-			<!--  -->
-			<!-- <div class="grid-x grid-padding-x grid-padding-y align-middle">
-				<div class="large-offset-1 large-3 medium-4 small-4 cell">
-					<div>
-						<p><img src="media/image.gif" /></p>
-					</div>
-				</div>
-				<div class="large-7 medium-8 small-8 cell">
-					<div>
-						<h3>Expansion of Research Sites:</h3>
-						<ul>
-							<li>Identify potential sites with similar ecological significance to the Deadmans Head Forest for expanding research efforts.</li>
-							<li>Establish partnerships with local stakeholders and authorities to gain access to new research sites and facilitate collaborative projects.</li>
-						</ul>
-					</div>
-				</div>
-			</div> -->
-			<!--  -->
 			<footer class="grid-x grid-padding-x grid-padding-y align-middle" id="contact">
 				<div class="large-4 medium-4 small-4 cell">
 					<div>
-						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" id="logo" /> LivingLaboratory.org</a>
+						<a href="/" rel="home" class="h4"><img src="media/logo.png" alt="" class="logo" /> LivingLaboratory.org</a>
 					</div>
 				</div>
 				<div class="large-8 medium-8 small-8 cell">
 					<div>
 						<ul class="menu align-right">
-							<ul class="menu align-right">
+							<ul class="dropdown menu align-right" data-dropdown-menu>
 								<li><a href="species.html">Species</a></li>
-								<li><a href="reports.html">Reports</a></li>
+								<li><a href="contact.html">Reports</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="legal.html">Legal Stuff</a></li>
 							</ul>
