--- a/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/index.html
+++ b/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/index.html
@@ -36,7 +36,7 @@
 						<ul class="dropdown menu align-right" data-dropdown-menu>
 							<li><a href="species.html">Species</a></li>
 							<li>
-								<a href="contact.html">Reports</a>
+								<a href="reports.html">Reports</a>
 								<ul class="menu align-right">
 									<li><a href="possible-approaches.html">Creating a Living Laboratory</a></li>
 									<li><a href="intertidal-zones.html">Intertidal Zones</a></li>
@@ -52,11 +52,9 @@
 				<div class="large-10 cell">
 					<h1>Creating a Living Laboratory on Deadmans Head to identify and research species and how they respond to climate change.</h1>
 
-					<code>monarch</code>
-					<p><img src="media/image.gif" /></p>
+					<p><img src="slideshow/144496043.jpg" /></p>
 
-					<code>land with markers</code>
-					<p><img src="media/image.gif" /></p>
+					<p><img src="media/site.png" /></p>
 				</div>
 			</div>
 			<!--  -->
@@ -82,7 +80,7 @@
 				</div>
 			</div>
 			<!--  -->
-			<code>6 to 10 photos to show diversity like lichen, flowers, eagle, porcupine, seaweed, monarch, etc</code>
+			<code>6 to 10 photos to show diversity like: flowers, seaweed, etc</code>
 			<div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
 				<div class="orbit-wrapper">
 					<div class="orbit-controls">
@@ -92,20 +90,38 @@
 					<ul class="orbit-container">
 						<li class="is-active orbit-slide">
 							<figure class="orbit-figure">
-								<img class="orbit-image" src="media/image.gif" alt="Space" />
-								<figcaption class="orbit-caption">slide...</figcaption>
+								<a href="https://www.inaturalist.org/observations/189362338"><img class="orbit-image" src="slideshow/189756392.jpg" alt="Powdered Sunshine Lichen (vulpicida pinastri)" /></a>
+								<figcaption class="orbit-caption">Powdered Sunshine Lichen (vulpicida pinastri)</figcaption>
 							</figure>
 						</li>
 						<li class="orbit-slide">
 							<figure class="orbit-figure">
-								<img class="orbit-image" src="media/image.gif" alt="Space" />
-								<figcaption class="orbit-caption">slide...</figcaption>
+								<a href="https://www.inaturalist.org/observations/145836210"><img class="orbit-image" src="slideshow/145836210.jpg" alt="Northern Bald Eagle (haliaeetus leucocephalus ssp. washingtoniensis)" /></a>
+								<figcaption class="orbit-caption">Northern Bald Eagle (haliaeetus leucocephalus ssp. washingtoniensis)</figcaption>
 							</figure>
 						</li>
 						<li class="orbit-slide">
 							<figure class="orbit-figure">
-								<img class="orbit-image" src="media/image.gif" alt="Space" />
-								<figcaption class="orbit-caption">slide...</figcaption>
+								<a href="https://www.inaturalist.org/observations/145836062"><img class="orbit-image" src="slideshow/145836062.jpg" alt="North American Porcupine (erethizon dorsatum)" /></a>
+								<figcaption class="orbit-caption">North American Porcupine (erethizon dorsatum)</figcaption>
+							</figure>
+						</li>
+						<li class="orbit-slide">
+							<figure class="orbit-figure">
+								<a href="https://www.inaturalist.org/observations/144496043"><img class="orbit-image" src="slideshow/144496043.jpg" alt="Monarch (danaus plexippus)" /></a>
+								<figcaption class="orbit-caption">Monarch (danaus plexippus)</figcaption>
+							</figure>
+						</li>
+						<li class="orbit-slide">
+							<figure class="orbit-figure">
+								<a href="https://www.inaturalist.org/observations/todo"><img class="orbit-image" src="slideshow/todo.jpg" alt="todo" /></a>
+								<figcaption class="orbit-caption">todo</figcaption>
+							</figure>
+						</li>
+						<li class="orbit-slide">
+							<figure class="orbit-figure">
+								<a href="https://www.inaturalist.org/observations/todo"><img class="orbit-image" src="slideshow/todo.jpg" alt="todo" /></a>
+								<figcaption class="orbit-caption">todo</figcaption>
 							</figure>
 						</li>
 					</ul>
@@ -115,8 +131,11 @@
 						<span class="show-for-sr">First slide details.</span>
 						<span class="show-for-sr" data-slide-active-label>Current Slide</span>
 					</button>
-					<button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
+					<button data-slide="1"><img class="orbit-image" src="slideshow/144496043.jpg" alt="Monarch (danaus plexippus)" /><span class="show-for-sr">Second slide details.</span></button>
 					<button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
+					<button data-slide="3"><span class="show-for-sr">Third slide details.</span></button>
+					<button data-slide="4"><span class="show-for-sr">Third slide details.</span></button>
+					<button data-slide="5"><span class="show-for-sr">Third slide details.</span></button>
 				</nav>
 			</div>
 			<h2 class="text-center">Goals</h2>
@@ -124,8 +143,7 @@
 			<div class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-offset-1 large-3 medium-4 small-4 cell">
 					<div>
-						<code>bay of fundy</code>
-						<p><img src="media/image.gif" /></p>
+						<p><img src="media/DJI_0136.jpg" /></p>
 					</div>
 				</div>
 				<div class="large-7 medium-8 small-8 cell">
@@ -142,8 +160,7 @@
 			<div class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-offset-1 large-3 medium-4 small-4 cell">
 					<div>
-						<code>students</code>
-						<p><img src="media/image.gif" /></p>
+						<p><img src="media/students2.jpg" /></p>
 					</div>
 				</div>
 				<div class="large-7 medium-8 small-8 cell">
@@ -160,8 +177,7 @@
 			<div class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-offset-1 large-3 medium-4 small-4 cell">
 					<div>
-						<code>drone</code>
-						<p><img src="media/image.gif" /></p>
+						<p><img src="media/drone.jpg" /></p>
 					</div>
 				</div>
 				<div class="large-7 medium-8 small-8 cell">
@@ -178,8 +194,7 @@
 			<div class="grid-x grid-padding-x grid-padding-y align-middle">
 				<div class="large-offset-1 large-3 medium-4 small-4 cell">
 					<div>
-						<code>inat</code>
-						<p><img src="media/image.gif" /></p>
+						<p><img src="media/map-points.jpg" /></p>
 					</div>
 				</div>
 				<div class="large-7 medium-8 small-8 cell">
@@ -204,7 +219,7 @@
 						<ul class="menu align-right">
 							<ul class="dropdown menu align-right" data-dropdown-menu>
 								<li><a href="species.html">Species</a></li>
-								<li><a href="contact.html">Reports</a></li>
+								<li><a href="reports.html">Reports</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="legal.html">Legal Stuff</a></li>
 							</ul>
