--- a/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/intertidal-zones.html
+++ b/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/intertidal-zones.html
@@ -22,7 +22,7 @@
 						<ul class="dropdown menu align-right" data-dropdown-menu>
 							<li><a href="species.html">Species</a></li>
 							<li>
-								<a href="contact.html">Reports</a>
+								<a href="reports.html">Reports</a>
 								<ul class="menu align-right">
 									<li><a href="possible-approaches.html">Creating a Living Laboratory</a></li>
 									<li><a href="intertidal-zones.html">Intertidal Zones</a></li>
@@ -44,7 +44,7 @@
 			<div class="grid-x grid-padding-x">
 				<div class="large-12 medium-12 small-12 cell">
 					<div>
-						<p>
+						<p class="byline">
 							By: Allysia Murphy, Sarah Dooley, Allison Meister, Kianna Hughes Clarke, Dhiman Sen <br />
 							December 7, 2023
 						</p>
@@ -62,11 +62,10 @@
 			<div class="grid-x grid-padding-x">
 				<div class="large-6 medium-6 small-6 cell">
 					<div>
-						<code>DRONE VIDEO</code>
+						<code>REPORT IMAGES</code>
 					</div>
 				</div>
 				<div class="large-6 medium-6 small-6 cell">
-					<code>allysiamurphy9</code>
 					<div>
 						<div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
 							<div class="orbit-wrapper">
@@ -77,20 +76,26 @@
 								<ul class="orbit-container">
 									<li class="is-active orbit-slide">
 										<figure class="orbit-figure">
-											<img class="orbit-image" src="media/image.gif" alt="Space" />
-											<figcaption class="orbit-caption">slide...</figcaption>
+											<a href="https://www.inaturalist.org/observations/189362338"><img class="orbit-image" src="intertidal-zones/189362338.jpg" alt="Northern Acorn Barnacle (semibalanus balanoides)" /></a>
+											<figcaption class="orbit-caption">Northern Acorn Barnacle (semibalanus balanoides)</figcaption>
 										</figure>
 									</li>
 									<li class="orbit-slide">
 										<figure class="orbit-figure">
-											<img class="orbit-image" src="media/image.gif" alt="Space" />
-											<figcaption class="orbit-caption">slide...</figcaption>
+											<a href="https://www.inaturalist.org/observations/189361889"><img class="orbit-image" src="intertidal-zones/189361889.jpg" alt="Jonah Crab (cancer borealis)" /></a>
+											<figcaption class="orbit-caption">Jonah Crab (cancer borealis)</figcaption>
 										</figure>
 									</li>
 									<li class="orbit-slide">
 										<figure class="orbit-figure">
-											<img class="orbit-image" src="media/image.gif" alt="Space" />
-											<figcaption class="orbit-caption">slide...</figcaption>
+											<a href="https://www.inaturalist.org/observations/189361781"><img class="orbit-image" src="intertidal-zones/189361781.jpg" alt="Common Coralline (corallina officinalis)" /></a>
+											<figcaption class="orbit-caption">Common Coralline (corallina officinalis)</figcaption>
+										</figure>
+									</li>
+									<li class="orbit-slide">
+										<figure class="orbit-figure">
+											<a href="https://www.inaturalist.org/observations/189361713"><img class="orbit-image" src="intertidal-zones/189361713.jpg" alt="Nori (genus Porphyra)" /></a>
+											<figcaption class="orbit-caption">Nori (genus Porphyra)</figcaption>
 										</figure>
 									</li>
 								</ul>
@@ -102,6 +107,7 @@
 								</button>
 								<button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
 								<button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
+								<button data-slide="3"><span class="show-for-sr">Third slide details.</span></button>
 							</nav>
 						</div>
 					</div>
@@ -130,7 +136,7 @@
 						<ul class="menu align-right">
 							<ul class="dropdown menu align-right" data-dropdown-menu>
 								<li><a href="species.html">Species</a></li>
-								<li><a href="contact.html">Reports</a></li>
+								<li><a href="reports.html">Reports</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="legal.html">Legal Stuff</a></li>
 							</ul>
