--- a/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/reports.html
+++ b/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/reports.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Contact</title>
+		<title>Reports</title>
 		<link rel="stylesheet" href="css/foundation.css" />
 		<link rel="stylesheet" href="css/app.css" />
 	</head>
@@ -36,11 +36,33 @@
 			<!--  -->
 			<div class="grid-x grid-padding-x">
 				<div class="large-12 medium-12 small-12 cell">
-					<h1>Contact</h1>
-					<p>Hey there! Interested in teaming up to make a positive difference on our planet? We're all about collaboration and making things happen together. Whether you have an idea for a community project, want to join forces for an event, or just feel like brainstorming some cool initiatives, we'd love to hear from you. Let's chat and see how we can work together to create something awesome!</p>
-					<p><a href="mailto:eorae@yahoo.com?subject=livinglaboratory.org">eorae@yahoo.com</a></p>
-					<p><a href="tel:+15086659192">1-508-665-9192</a></p>
-					<p><img src="media/seeley.jpg" /></p>
+					<h2>Reports</h2>
+					<a href="possible-approaches.html">
+						<div class="card">
+							<div class="card-section">
+								<h3>Creating a Living Laboratory for Deadmans Head Forest During the Age of Climate Change</h3>
+								<p class="byline">
+									By: Abigail Evans, Emilie Noel, Peter Anyah, Rohan Mishra<br />
+									December 08, 2022
+								</p>
+
+								<p>Baseline data for the forest was collected during several site visits to determine key characteristics of this forest. Furthermore, literature research was conducted to determine predictions for the future of this forest. An NDVI (Normalized Difference Vegetation Index) map was created for the property to determine the overall health of the forest. As well, a LanDSET model was created to determine soil moisture.</p>
+							</div>
+						</div>
+					</a>
+					<!--  -->
+					<a href="intertidal-zones.html">
+						<div class="card">
+							<div class="card-section">
+								<h3>Intertidal Zones within Deadmans Harbour and the Bay of Fundy</h3>
+								<p class="byline">
+									By: Allysia Murphy, Sarah Dooley, Allison Meister, Kianna Hughes Clarke, Dhiman Sen <br />
+									December 7, 2023
+								</p>
+								<p>In Phase Two of this project we assess the coastal community structure that makes up the intertidal zone on both sides of the peninsula, sites are along Deadmans Harbour and the Bay of Fundy. From the field work and literature review done we present a comprehensive overview and baseline of the species that live within the site or those that could potentially interact with the site and what the possible impacts of climate change could mean for these species.</p>
+							</div>
+						</div>
+					</a>
 				</div>
 			</div>
 			<!--  -->
