--- a/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/possible-approaches.html
+++ b/FTZzLTm9y6lEYD3YKz51ho8ubQk5Da/possible-approaches.html
@@ -22,7 +22,7 @@
 						<ul class="dropdown menu align-right" data-dropdown-menu>
 							<li><a href="species.html">Species</a></li>
 							<li>
-								<a href="contact.html">Reports</a>
+								<a href="reports.html">Reports</a>
 								<ul class="menu align-right">
 									<li><a href="possible-approaches.html">Creating a Living Laboratory</a></li>
 									<li><a href="intertidal-zones.html">Intertidal Zones</a></li>
@@ -43,7 +43,7 @@
 			<div class="grid-x grid-padding-x">
 				<div class="large-12 medium-12 small-12 cell">
 					<div>
-						<p>
+						<p class="byline">
 							By: Abigail Evans, Emilie Noel, Peter Anyah, Rohan Mishra<br />
 							December 08, 2022
 						</p>
@@ -66,10 +66,8 @@
 					</div>
 				</div>
 				<div class="large-6 medium-6 small-6 cell">
-					<code>emilienoel</code>
-
 					<div>
-						<div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+						<div class="orbit" role="region" aria-label="todo" data-orbit>
 							<div class="orbit-wrapper">
 								<div class="orbit-controls">
 									<button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
@@ -78,20 +76,32 @@
 								<ul class="orbit-container">
 									<li class="is-active orbit-slide">
 										<figure class="orbit-figure">
-											<img class="orbit-image" src="media/image.gif" alt="Space" />
-											<figcaption class="orbit-caption">slide...</figcaption>
+											<a href="https://www.inaturalist.org/observations/137056701"><img class="orbit-image" src="possible-approaches/137056701.jpg" alt="Eastern Phoebe (sayornis phoebe)" /></a>
+											<figcaption class="orbit-caption">Eastern Phoebe (sayornis phoebe)</figcaption>
 										</figure>
 									</li>
 									<li class="orbit-slide">
 										<figure class="orbit-figure">
-											<img class="orbit-image" src="media/image.gif" alt="Space" />
-											<figcaption class="orbit-caption">slide...</figcaption>
+											<a href="https://www.inaturalist.org/observations/137863157"><img class="orbit-image" src="possible-approaches/137863157.jpg" alt="Blackening Brittlegill (russula nigricans)" /></a>
+											<figcaption class="orbit-caption">Blackening Brittlegill (russula nigricans)</figcaption>
 										</figure>
 									</li>
 									<li class="orbit-slide">
 										<figure class="orbit-figure">
-											<img class="orbit-image" src="media/image.gif" alt="Space" />
-											<figcaption class="orbit-caption">slide...</figcaption>
+											<a href="https://www.inaturalist.org/observations/138739506"><img class="orbit-image" src="possible-approaches/138739506.jpg" alt="Honey Mushroom (armillaria ostoyae)" /></a>
+											<figcaption class="orbit-caption">Honey Mushroom (armillaria ostoyae)</figcaption>
+										</figure>
+									</li>
+									<li class="orbit-slide">
+										<figure class="orbit-figure">
+											<a href="https://www.inaturalist.org/observations/138747116"><img class="orbit-image" src="possible-approaches/138747116.jpg" alt="Genus Fomitopsis" /></a>
+											<figcaption class="orbit-caption">Genus Fomitopsis</figcaption>
+										</figure>
+									</li>
+									<li class="orbit-slide">
+										<figure class="orbit-figure">
+											<a href="https://www.inaturalist.org/observations/139533304"><img class="orbit-image" src="possible-approaches/139533304.jpg" alt="Orange Jelly Spot (dacrymyces chrysospermus)" /></a>
+											<figcaption class="orbit-caption">Orange Jelly Spot (dacrymyces chrysospermus)</figcaption>
 										</figure>
 									</li>
 								</ul>
@@ -103,6 +113,8 @@
 								</button>
 								<button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
 								<button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
+								<button data-slide="3"><span class="show-for-sr">Third slide details.</span></button>
+								<button data-slide="4"><span class="show-for-sr">Third slide details.</span></button>
 							</nav>
 						</div>
 					</div>
@@ -130,7 +142,7 @@
 						<ul class="menu align-right">
 							<ul class="dropdown menu align-right" data-dropdown-menu>
 								<li><a href="species.html">Species</a></li>
-								<li><a href="contact.html">Reports</a></li>
+								<li><a href="reports.html">Reports</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="legal.html">Legal Stuff</a></li>
 							</ul>
